Opened 8 years ago
Closed 8 years ago
#13127 closed bug (fixed)
[Patch] kits/shared/IconButton.cpp: fix memory leak
Reported by: | mt | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Kits | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
If BBitmap->Lock() fails, memory allocated to BView may leak [1] [2]. [1] http://cgit.haiku-os.org/haiku/tree/src/kits/shared/IconButton.cpp#n451 [2] http://cgit.haiku-os.org/haiku/tree/src/kits/shared/IconButton.cpp#n667
Attachments (1)
Change History (3)
by , 8 years ago
Attachment: | 0039-IconButton.cpp-fix-memory-leak.patch added |
---|
comment:1 by , 8 years ago
patch: | 0 → 1 |
---|
comment:2 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Applied in hrev50798.